--- a/src/css/general.css
+++ b/src/css/general.css
@@ -7,7 +7,7 @@ body {
 
 .header {
   height: 150px;
-  background-color: orange;
+  background-color: #ff5252;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -20,32 +20,34 @@ body {
           align-items: center;
 }
 
-.header p {
-  border: solid 1px white;
-  color: white;
-  padding: 1rem;
+.header .header-title {
+  font-style: normal;
+  font-weight: bold;
   font-size: 2rem;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: white;
 }
 
-.header div {
+.header .header-creator {
   border: solid 1px white;
   color: white;
   padding: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
-.header div span {
-  font-size: 1.5rem;
+.header .header-creator span {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1rem;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.header div a {
-  margin-top: 0.3rem;
+.header .header-creator a {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 0.7rem;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: inline-flexbox;
+  margin-left: 5px;
 }
 
 .button1 {
